--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 		</h2>
 		</div>
 	  <div class="equipment-gif">
-		<img class="ball-gif" src="basketball-1.gif">
+		<img class="ball-gif" src="basketball-assets/basketball-1.gif">
 		</div>
 	</a>
 	</div>
