--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>basketball & its equipment</title>
-<link rel="stylesheet" href="custom/style.css">
+<link rel="stylesheet" href="custom.css">
 
 <body>
 <header>
